# cjm-python-decompose-core

./: README.md  pyproject.toml
cjm_python_decompose_core/: emit.py  extract.py  ingest.py  parse.py
tests/: test_extract_ingest.py  test_imports_emit.py  test_method_attribution.py  test_parse.py  test_regions_emit.py
tests_manual/: imports_projection.py
