[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-python-decompose-core"
dynamic = ["version"]
description = "A Python source-code decomposition core for context graphs: parses .py modules (docstrings, imports, and the symbol tree of functions/classes/methods with their calls) into provenance-carrying graph nodes and edges that co-reside with the markdown source-type. First source = the ecosystem's own code; generalizes to any Python corpus."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['cjm-dev-graph-schema>=0.0.4', 'cjm-context-graph-layer>=0.0.7', 'cjm-context-graph-primitives>=0.0.12']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-python-decompose-core"

[tool.setuptools.dynamic]
version = {attr = "cjm_python_decompose_core.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_python_decompose_core*"]
